--- a/assets/pages/create-mail.html
+++ b/assets/pages/create-mail.html
@@ -4,7 +4,7 @@
                         <div class="xp-email-rightbar">
 <div class="card m-b-30 text-right">
                                 <div class="card-header bg-white">
-                                    <h5 class="card-title text-black">انشاء كتاب جديد</h5>
+                                    <h5 class="card-title text-black">انشات كتاب جديد</h5>
                                 </div>
                                 <div class="card-body">  
                                 <div id="clickarea">
